# elephantq

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  release.py  run_tests.py  zensical.toml
.github/workflows/: lint.yml  publish.yml  test.yml
deployment/: Dockerfile.dashboard  Dockerfile.worker  README.md  docker-compose.yml  elephantq-dashboard.service  elephantq-scheduler.service  elephantq-worker.service  kubernetes.yaml  soniq-worker.service  supervisor.conf
docs/: agents.md  architecture.md  backends.md  cli.md  dashboard.md  deployment.md  feature-flags.md  features.md  getting-started.md  index.md  instance-api.md  monitoring.md  pgbouncer.md  production.md  quickstart.md  retries.md  scheduling.md  stuck-job-recovery.md  testing.md  transactional-enqueue.md  troubleshooting.md  webhooks.md
docs/api/: elephantq.md  hooks.md  index.md  jobs.md  soniq.md  worker.md
docs/cli/: commands.md  index.md
docs/concepts/: dead-letter.md  index.md  jobs.md  queues.md  retries.md  scheduling.md  tasks-vs-jobs.md  workers.md
docs/contracts/: audit.md  dead_letter.md  instance_boundary.md  observability.md  queue_stats.md  shutdown.md
docs/dashboard/: index.md  overview.md
docs/design/: dlq_option_a.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: common-patterns.md  cross-service-jobs.md  fastapi.md  index.md  testing.md  transactional-enqueue.md
docs/migration/: 0.0.x-to-cross-service.md  from-celery.md  from-rq.md  index.md
docs/plugins/: authoring.md  extracting-features.md
docs/production/: checklist.md  deployment-docker-compose.md  deployment-kubernetes.md  deployment-supervisor.md  deployment-systemd.md  deployment.md  going-to-production.md  index.md  postgres.md  reliability.md
docs/recipes/: cross-service-task-stubs.md  custom-metrics-sink.md  custom-retry-policy.md  custom-serializer.md  email-jobs.md  file-processing.md  index.md  scheduled-reports.md  webhook-delivery.md
docs/reference/: glossary.md  index.md
docs/tutorial/: 01-defining-jobs.md  02-running-workers.md  03-retries.md  04-scheduling.md  05-queues.md  06-transactional-enqueue.md
elephantq/: __init__.py  _active.py  app.py  client.py  dead_letter.py  discovery.py  errors.py  health.py  job.py  metrics.py  scheduling.py  settings.py  webhooks.py  worker.py
elephantq/backends/: __init__.py  memory.py  postgres.py  sqlite.py
elephantq/cli/: colors.py  main.py  registry.py
elephantq/core/: heartbeat.py  leadership.py  processor.py  queue.py  registry.py  retry.py
elephantq/dashboard/: __init__.py  app.py  fastapi_app.py
elephantq/db/: connection.py  context.py  helpers.py  migration_runner.py  migrations.py
elephantq/features/: __init__.py  dead_letter.py  dependencies.py  features.py  flags.py  logging.py  managers.py  metrics.py  recurring.py  scheduling.py  security.py  signing.py  timeout_processor.py  webhooks.py
elephantq/utils/: __init__.py
examples/: basic_app.py  file_processing.py  instance_api.py  job_returns_value.py  queue_routing.py  recurring_jobs.py  snooze_on_rate_limit.py  transactional_enqueue.py  webhook_delivery.py
examples/cross_service/: consumer.py  producer.py
jobs/: __init__.py  my_tasks.py
scripts/: migrate_enqueue.py
soniq/: __init__.py  _active.py  app.py  celery.py  discovery.py  errors.py  job.py  plugin.py  settings.py  task_ref.py  types.py  worker.py
soniq/backends/: __init__.py  memory.py  postgres.py  sqlite.py
soniq/cli/: _context.py  _helpers.py  dashboard.py  dead_letter.py  main.py  metrics.py  migrate_status.py  scheduler.py  setup.py  start.py  status.py  tasks.py  workers.py
soniq/core/: heartbeat.py  naming.py  processor.py  registry.py  retry.py  worker.py
soniq/dashboard/: __init__.py  app.py  fastapi_app.py  server.py
soniq/db/: connection.py  context.py  helpers.py  migrations.py
soniq/features/: __init__.py  dead_letter.py  flags.py  logging.py  managers.py  metrics.py  recurring.py  scheduler.py  scheduling.py  signing.py  timeout_processor.py  webhooks.py
soniq/observability/: __init__.py  metrics.py  prometheus.py
soniq/testing/: memory_backend.py
soniq/utils/: producer_id.py  rate_limit.py  serialization.py
tests/: README.md  conftest.py  db_utils.py  test_examples_smoke.py
tests/backend/: conftest.py  test_crash_loop.py  test_dequeue.py  test_job_crud.py  test_maintenance.py  test_status_transitions.py  test_unique_dedup.py  test_worker_tracking.py
tests/contract/: test_dashboard_dlq.py  test_metrics_lifecycle.py  test_queue_stats_keys.py
tests/fixtures/: __init__.py  cli_jobs.py
tests/functional/: conftest.py  test_elephantq_enqueue.py  test_elephantq_management.py  test_enqueue.py  test_management.py  test_sqlite_flows.py  test_worker_continuous.py
tests/integration/: __init__.py  conftest.py  test_concurrent_dequeue.py  test_configure_pool_leak.py  test_crash_recovery.py  test_cross_service_enqueue.py  test_dashboard_api.py  test_database_url_integration.py  test_dead_letter_queue.py  test_dead_letter_recursion.py  test_features_honor_instance.py  test_job_results.py  test_leader_election.py  test_migration_race.py  test_migrations.py  test_missing_handler.py  test_pool_exhaustion.py  test_postgres_backend.py  test_queueing_lock.py  test_schedule_builder_race.py  test_scheduler_leader.py  test_snooze_postgres.py  test_timeout_integration.py  test_transactional_enqueue.py  test_webhooks.py  (+1 more)
(+213 files in other folders)
